src/components/layout/AppShell/AppShell.module.scss
@use '@/styles/variables' as *;
@use '@/styles/mixins' as *;

.shell {
  display: flex;
  width: 100%;
  min-width: 0;
  height: 100dvh;
  overflow: hidden;
  padding-top: env(safe-area-inset-top, 0px);
  background: $color-sidebar;

  @include mobile {
    flex-direction: column;
  }
}
.sidebar {
  flex-shrink: 0;
  height: 100%;
  @include mobile {
    display: none;
  }
}
.bottomTab {
  display: none;
  @include mobile {
    display: flex;
    position: fixed;
    bottom: 0;
    left: 0;
    right: 0;
    height: calc(#{$bottom-tab-height} + env(safe-area-inset-bottom, 0px));
    z-index: $z-sidebar;
  }
}
.main {
  flex: 1;
  display: flex;
  flex-direction: column;
  min-width: 0;
  min-height: 0;
  overflow: hidden;
  background: $color-bg;
}
.topbar {
  flex-shrink: 0;
}
.content {
  flex: 1;
  min-width: 0;
  overflow-x: hidden;
  overflow-y: auto;
  @include mobile {
    padding-bottom: calc(#{$bottom-tab-height} + env(safe-area-inset-bottom, 0px));
  }
}

